# hello-ci

./: README.md  dagger.json
.dagger/scripts/: buildlog_simple_junit.py
.dagger/src/basics/: main.py
.github/workflows/: dagger.yml
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/include/my_cpp_pkg/: simple_node.hpp
src/my_cpp_pkg/src/: main.cpp  simple_node.cpp
src/my_cpp_pkg/test/: test_simple_node.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: simple_node.py
src/my_py_pkg/test/: test_simple_node.py
